--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -1191,24 +1191,110 @@ interactions_state <- felm(
 ```
 
 ```{r}
-# most_recent_housing <- most_recent_housing %>%
-#   mutate(lender = as.factor(lender),
-#          fips = as.factor(fips),
-#          renter_percent = as.double(renter_percent))
-#   
-# # Trying to add rent
-# 
-# dems <- felm(
-#   business_days ~ 1 + 
-#     median_family_income + 
-#     minority_percent +
-#     high_school_pct + 
-#     married_percent + male_percent + 
-#     cook_pvi + 
-#     rural +
-#     estimate_gini_index +
-#     violent_crime_rate + renter_percent + 
-#     renter_percent|0|0|zip,
-#   data = most_recent_housing)
-# ```
+# Let's also take a look at whether this relationship is significant on
+# county level, using minority business ownership instead of minority
+# percent
+
+most_recent_ownership_county <- 
+  readRDS('most_recent_county_nobanks_ownership.rds') %>%
+  mutate(lender = as.factor(lender), state = as.factor(state))
+
+county_covid_biz <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz + 
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent +
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths|lender + state|0|fips, 
+    data = most_recent_ownership_county
+)
+```
+
+```{r}
+
+county_covid_biz_sq <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz + 
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent +
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths + 
+    I(percent_minority_biz^2)|lender + state|0|fips, 
+    data = most_recent_ownership_county
+)
+```
+
+```{r}
+
+# Doing the same on zip level -- don't run this, it doesn't work lol
+
+covid_fe <- felm(
+  business_days ~ 1 + 
+    median_family_income + 
+    percent_minority_biz_county +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent + 
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    payroll +
+    unemployment_rate_apr + 
+    unemployment_rate + 
+    mean_start_cases_weighted +
+    mean_start_deaths_weighted + 
+    mean_end_cases_weighted +
+    mean_end_deaths_weighted + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current|state + lender|0|fips,
+  data = most_recent_ownership)
+```
+
 
